# kano-agent-backlog-skill

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.en.md  README.md  REFERENCE.md  SKILL.md  VERSIONING.md  index.html  index.xml  pyproject.toml  pyrightconfig.json  sitemap.xml  skill-guide.html  test_output.txt  test_performance_report.json  test_vcs.py
.githooks/: README.md  commit-msg  post-commit
adr/: ADR-0001_backlog-structure-and-moc.html  ADR-0002_decisions-as-adr-links.html  ADR-0003-appendix_collision-report-cli-spec.html  ADR-0003-appendix_id-resolver-spec.html  ADR-0003-appendix_migration-plan-uid.html  ADR-0003-appendix_ulid-vs-uuidv7-comparison.html  ADR-0003_identifier-strategy-for-local-first-backlog.html  ADR-0004_file-first-architecture-with-sqlite-index.html  ADR-0004_per-product-isolated-index-architecture.html  ADR-0005_product-column-retention-rationale.html  ADR-0005_skill-versioning-and-release-policy.html  ADR-0006_multi-product-directory-structure.html  ADR-0007_vcs-as-source-of-truth-derived-commit-data.html  ADR-0008_sqlite-schema-migration-framework.html  ADR-0009_local-first-embedding-search-architecture.html  ADR-0010_project-babylon-global-scale-collaboration-vision.html  ADR-0011_graph-assisted-retrieval-and-context-graph.html  ADR-0011_workset-graphrag-context-graph-separation-of-responsibilities.html  ADR-0012_workset-db-canonical-schema-reuse.html  ADR-0013_codebase-architecture-and-module-boundaries.html  ADR-0014_plugin-and-hook-system-architecture.html  ADR-0015_decision-for-kabsd-tsk-0056.html  ADR-0015_skill-scoped-cli-namespace-convention.html  ADR-0016_per-product-isolated-index-architecture.html  ADR-0017_product-column-retention-rationale.html  ADR-0018_decision-for-kabsd-tsk-0056.html  ADR-0019_decision-for-kabsd-tsk-0056.html  ADR-0020_decision-for-kabsd-tsk-0056.html  ADR-0021_per-product-isolated-index-architecture.html  ADR-0022_product-column-retention-rationale.html  ADR-0023_graph-assisted-retrieval-and-context-graph.html  ADR-0024_decision-for-kabsd-tsk-0056.html  ADR-0025_decision-for-kabsd-tsk-0056.html  ADR-0026_decision-for-kabsd-tsk-0056.html  ADR-0027_decision-for-kabsd-tsk-0056.html  ADR-0028_per-product-isolated-index-architecture.html  ADR-0029_product-column-retention-rationale.html  ADR-0030_graph-assisted-retrieval-and-context-graph.html  ADR-0031_per-product-isolated-index-architecture.html  ADR-0032_per-product-isolated-index-architecture.html  (+7 more)
api/: index.html
api-docs/: 404.html  index.html  objects.inv  sitemap.xml
src/cpp/: CMakeLists.txt  CMakePresets.json  build_debug.bat
src/cpp/apps/kano_backlog_webview/: CMakeLists.txt  README.md  main.cpp
src/cpp/code/apps/kano_backlog_cli/: CMakeLists.txt  main.cpp
src/cpp/code/systems/kano_backlog_core/: CMakeLists.txt
src/cpp/code/systems/kano_backlog_core/config/private/: config.cpp
src/cpp/code/systems/kano_backlog_core/config/public/kano/backlog_core/config/: config.hpp
src/cpp/code/systems/kano_backlog_core/frontmatter/private/: canonical_store.cpp  frontmatter.cpp
src/cpp/code/systems/kano_backlog_core/frontmatter/public/kano/backlog_core/frontmatter/: canonical_store.hpp  frontmatter.hpp
src/cpp/code/systems/kano_backlog_core/models/private/: errors.cpp  models.cpp
src/cpp/code/systems/kano_backlog_core/models/public/kano/backlog_core/models/: errors.hpp  models.hpp
src/cpp/code/systems/kano_backlog_core/refs/private/: ref_parser.cpp  ref_resolver.cpp
src/cpp/code/systems/kano_backlog_core/refs/public/kano/backlog_core/refs/: ref_parser.hpp  ref_resolver.hpp
src/cpp/code/systems/kano_backlog_core/state/private/: state_machine.cpp
src/cpp/code/systems/kano_backlog_core/state/public/kano/backlog_core/state/: state_machine.hpp
src/cpp/code/systems/kano_backlog_core/validation/private/: validator.cpp
src/cpp/code/systems/kano_backlog_core/validation/public/kano/backlog_core/validation/: validator.hpp
src/cpp/code/systems/kano_backlog_core/version/private/: version.cpp
src/cpp/code/systems/kano_backlog_core/version/public/: version.hpp
src/cpp/code/systems/kano_backlog_ops/: CMakeLists.txt
src/cpp/code/systems/kano_backlog_ops/config/private/: config_ops.cpp
src/cpp/code/systems/kano_backlog_ops/config/public/kano/backlog_ops/config/: config_ops.hpp
src/cpp/code/systems/kano_backlog_ops/doctor/private/: doctor_ops.cpp
src/cpp/code/systems/kano_backlog_ops/doctor/public/kano/backlog_ops/doctor/: doctor_ops.hpp
src/cpp/code/systems/kano_backlog_ops/index/private/: backlog_index.cpp
src/cpp/code/systems/kano_backlog_ops/index/public/kano/backlog_ops/index/: backlog_index.hpp
src/cpp/code/systems/kano_backlog_ops/orchestration/private/: orchestration_ops.cpp
src/cpp/code/systems/kano_backlog_ops/orchestration/public/kano/backlog_ops/orchestration/: orchestration_ops.hpp
src/cpp/code/systems/kano_backlog_ops/templates/private/: template_ops.cpp
src/cpp/code/systems/kano_backlog_ops/templates/public/kano/backlog_ops/templates/: template_ops.hpp
src/cpp/code/systems/kano_backlog_ops/topic/private/: topic_ops.cpp
src/cpp/code/systems/kano_backlog_ops/topic/public/kano/backlog_ops/topic/: topic_ops.hpp
src/cpp/code/systems/kano_backlog_ops/view/private/: view_ops.cpp
src/cpp/code/systems/kano_backlog_ops/view/public/kano/backlog_ops/view/: view_ops.hpp
src/cpp/code/systems/kano_backlog_ops/workitem/private/: workitem_ops.cpp
src/cpp/code/systems/kano_backlog_ops/workitem/public/kano/backlog_ops/workitem/: workitem_ops.hpp
src/cpp/code/systems/kano_backlog_ops/workset/private/: workset_ops.cpp
src/cpp/code/systems/kano_backlog_ops/workset/public/kano/backlog_ops/workset/: workset_ops.hpp
src/cpp/code/systems/kano_backlog_webview_core/private/: BacklogWebviewService.cpp
src/cpp/systems/kano_backlog_webview_core/: CMakeLists.txt
src/cpp/systems/kano_backlog_webview_core/internal/: README.md
src/cpp/systems/kano_backlog_webview_core/private/: KanoBacklogWebview.Strings.ixx
src/cpp/systems/kano_backlog_webview_core/public/: KanoBacklog.BacklogWebviewService.hpp
(+503 files in other folders)
